CRUD-products complete-without comments and simple UI

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,8 +5,8 @@
 <%= link_to "Search all products", product_index_path, :method => :get %>
 <%# product#show_own_products %>
 <%= link_to "My products", product_own_path, :method => :get %>
-<%# product#create %>
-<%= link_to "Create product", product_index_path, :method => :post %>
+<%# product#new %>
+<%= link_to "Create product", new_product_path, :method => :get %>
 </div>
 
 <div>
