--- a/app/views/product/index.html.erb
+++ b/app/views/product/index.html.erb
@@ -1,1 +1,13 @@
-Index file
+<% @products.each do |product|%>
+<div>
+Name: <%=product.name%>
+Details: <%=product.details%>
+
+<%= link_to 'Show', product_path(product)%>
+<%# <%= link_to 'Delete', product_path(product), method: :delete%>
+<%= link_to 'Delete', product_path(product), method: :delete, :data => {:confirm => 'Are you sure?'}%>
+
+
+</div>
+
+<%end%>
