--- a/app/views/product/ownproducts.erb
+++ b/app/views/product/ownproducts.erb
@@ -1,1 +1,13 @@
-Own products file
+<% @products.each do |product|%>
+<div>
+Name: <%=product.name%>
+Details: <%=product.details%>
+
+<%= link_to 'Show', product_path(product)%>
+<%= link_to 'Update', edit_product_path(product), method: :get%>
+<%= link_to 'Delete', product_path(product), method: :delete, :data => {:confirm => 'Are you sure?'}%>
+
+
+</div>
+
+<%end%>
