created comments table and comment's show action

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,9 @@
 
 <div>
 <%# product#index %>
-<%= link_to "Search all products", product_index_path, :method => :get %>
+<%= link_to "Search all products", product_index_path, :method => :get%>
+<%# %# <%= link_to "Search all products", products_path, :method => :get %>
+
 <%# product#show_own_products %>
 <%= link_to "My products", product_own_path, :method => :get %>
 <%# product#new %>
