--- a/app/views/product/index.html.erb
+++ b/app/views/product/index.html.erb
@@ -4,8 +4,11 @@ Name: <%=product.name%>
 Details: <%=product.details%>
 
 <%= link_to 'Show', product_path(product)%>
+<%= link_to 'Add Comment', new_product_comment_path(product), method: :get%>
+
+
 <%# <%= link_to 'Delete', product_path(product), method: :delete%>
-<%= link_to 'Delete', product_path(product), method: :delete, :data => {:confirm => 'Are you sure?'}%>
+<%# <%= link_to 'Delete', product_path(product), method: :delete, :data => {:confirm => 'Are you sure?'}%>
 
 
 </div>
