--- a/app/views/comment/edit.html.erb
+++ b/app/views/comment/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :comment, url: product_comment_index_path(params[:product_id]) , method: :post do |f| %>
+<%= form_for :comment, url: product_comment_path(params[:product_id], params[:id]) , method: :patch do |f| %>
   Text: <%= f.text_field :text %><br />
   
   <%= f.submit %>
