--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,6 +9,8 @@
 <%= link_to "My products", product_own_path, :method => :get %>
 <%# product#new %>
 <%= link_to "Create product", new_product_path, :method => :get %>
+<%= link_to "Shopping Cart", cart_path, :method => :get %>
+
 </div>
 
 <div>
