--- a/app/views/product/index.html.erb
+++ b/app/views/product/index.html.erb
@@ -5,6 +5,8 @@ Details: <%=product.details%>
 
 <%= link_to 'Show', product_path(product)%>
 <%= link_to 'Add Comment', new_product_comment_path(product), method: :get%>
+<%= link_to 'Add to Cart', cart_add_path(product), method: :post%>
+
 
 
 <%# <%= link_to 'Delete', product_path(product), method: :delete%>
