--- a/app/views/product/new.html.erb
+++ b/app/views/product/new.html.erb
@@ -1,6 +1,8 @@
 <%= form_for :product, url: product_index_path , method: :post do |f| %>
   Name: <%= f.text_field :name %><br />
   Details : <%= f.text_field :details %><br />
+  Price : <%= f.text_field :price %><br />
+
   
   <%= f.submit %>
 <% end %>
